--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -18,6 +18,10 @@ jobs:
         gemfile: ['gemfiles/nokogiri_13.10.gemfile', 'gemfiles/nokogiri_12.5.gemfile']
 
     steps:
+      - name: Install libxmlsec
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libxmlsec1-dev
       - uses: actions/checkout@v3
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
